--- a/packages/infrastructure/package.json
+++ b/packages/infrastructure/package.json
@@ -5,7 +5,7 @@
   "main": "./src/index.ts",
   "types": "./src/index.ts",
   "scripts": {
-    "test": "vitest",
+    "test": "vitest --no-watch",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
