--- a/packages/infrastructure/package.json
+++ b/packages/infrastructure/package.json
@@ -9,7 +9,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@mo/domain": "1.0.0"
+    "@mo/domain": "1.0.0",
+    "@mo/application": "1.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
