--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.7.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "zod": "^4.1.13"
   }
 }
