--- a/packages/infrastructure/package.json
+++ b/packages/infrastructure/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
+    "fake-indexeddb": "^6.0.0",
     "typescript": "^5.3.3",
     "vitest": "^1.1.0"
   }
