--- a/packages/infrastructure/package.json
+++ b/packages/infrastructure/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "main": "./src/index.ts",
   "types": "./src/index.ts",
+  "exports": {
+    ".": "./src/index.ts",
+    "./browser": "./src/browser.ts"
+  },
   "scripts": {
     "test": "vitest --no-watch",
     "typecheck": "tsc --noEmit"
