feat(web): wire worker sqlite store with debug overlay

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -12,8 +12,12 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
-    "types": ["vite/client", "node"]
+    "types": ["vite/client", "node"],
+    "paths": {
+      "vite": ["../../node_modules/vite"],
+      "vite/*": ["../../node_modules/vite/*"]
+    }
   },
-  "include": ["src"],
+  "include": ["src", "../../packages/infrastructure/src/types/**/*.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
