--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,18 +12,22 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@livestore/adapter-web": "0.4.0-dev.18",
+    "@livestore/livestore": "0.4.0-dev.18",
+    "@livestore/react": "0.4.0-dev.18",
     "@mo/application": "1.0.0",
     "@mo/domain": "1.0.0",
     "@mo/infrastructure": "1.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react-swc": "^3.7.1",
+    "@livestore/devtools-vite": "0.4.0-dev.18",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react-swc": "^4.2.2",
     "typescript": "^5.3.3",
-    "vite": "^5.4.10",
-    "vitest": "^1.6.1"
+    "vite": "^7.2.4",
+    "vitest": "^4.0.14"
   }
 }
