--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "prettier": "^3.7.3",
     "typescript": "^5.3.3",
     "zod": "^4.1.13"
+  },
+  "dependencies": {
+    "@livestore/peer-deps": "0.4.0-dev.18"
   }
 }
