--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,8 @@
     "@mo/application": "1.0.0",
     "@mo/domain": "1.0.0",
     "@mo/infrastructure": "1.0.0",
+    "@radix-ui/react-slot": "^1.2.4",
+    "clsx": "^2.1.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
@@ -26,6 +28,12 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react-swc": "^4.2.2",
+    "autoprefixer": "10.4.20",
+    "class-variance-authority": "^0.7.1",
+    "lucide-react": "^0.555.0",
+    "postcss": "8.4.47",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "3.4.14",
     "typescript": "^5.3.3",
     "vite": "^7.2.4",
     "vitest": "^4.0.14"
