chore(web): adopt shadcn cli components

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,10 +18,16 @@
     "@mo/application": "1.0.0",
     "@mo/domain": "1.0.0",
     "@mo/infrastructure": "1.0.0",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.555.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@livestore/devtools-vite": "0.4.0-dev.18",
