--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,15 +12,18 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "@livestore/adapter-web": "0.4.0-dev.18",
-    "@livestore/livestore": "0.4.0-dev.18",
-    "@livestore/react": "0.4.0-dev.18",
+    "@fontsource-variable/mulish": "^5.2.8",
+    "@fontsource/noto-sans": "^5.2.10",
+    "@livestore/adapter-web": "0.4.0-dev.19",
+    "@livestore/livestore": "0.4.0-dev.19",
+    "@livestore/react": "0.4.0-dev.19",
     "@mo/application": "1.0.0",
     "@mo/domain": "1.0.0",
     "@mo/infrastructure": "1.0.0",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
+    "@tailwindcss/vite": "^4.1.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.555.0",
@@ -30,7 +33,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@livestore/devtools-vite": "0.4.0-dev.18",
+    "@livestore/devtools-vite": "0.4.0-dev.19",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react-swc": "^4.2.2",
@@ -38,8 +41,7 @@
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.555.0",
     "postcss": "8.4.47",
-    "tailwind-merge": "^3.4.0",
-    "tailwindcss": "3.4.14",
+    "tailwindcss": "4.1.17",
     "typescript": "^5.3.3",
     "vite": "^7.2.4",
     "vitest": "^4.0.14"
