--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "format": "prettier --write \"**/*.{ts,tsx,json,md}\"",
-    "format:check": "prettier --check \"**/*.{ts,tsx,json,md}\"",
-    "postinstall": "patch-package"
+    "format:check": "prettier --check \"**/*.{ts,tsx,json,md}\""
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.48.0",
@@ -24,7 +23,6 @@
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
-    "patch-package": "^8.0.1",
     "prettier": "^3.7.3",
     "typescript": "^5.3.3",
     "zod": "^4.1.13"
