chore: add goals bc entrypoints and lazy page

--- a/packages/infrastructure/package.json
+++ b/packages/infrastructure/package.json
@@ -6,6 +6,7 @@
   "types": "./src/index.ts",
   "exports": {
     ".": "./src/index.ts",
+    "./goals": "./src/goals/index.ts",
     "./browser": "./src/browser.ts",
     "./browser/schema": "./src/browser/schema.ts",
     "./browser/worker": "./src/browser/worker.ts"
