--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -18,6 +18,6 @@
       "vite/*": ["../../node_modules/vite/*"]
     }
   },
-  "include": ["src", "../../packages/infrastructure/src/types/**/*.d.ts"],
+  "include": ["src", "__tests__", "../../packages/infrastructure/src/types/**/*.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
