--- a/packages/infrastructure/package.json
+++ b/packages/infrastructure/package.json
@@ -9,6 +9,13 @@
     "./goals": "./src/goals/index.ts",
     "./projects": "./src/projects/index.ts",
     "./browser": "./src/browser.ts",
+    "./browser/wiring/store": "./src/browser/wiring/store.ts",
+    "./events/InMemoryEventBus": "./src/events/InMemoryEventBus.ts",
+    "./crypto/IndexedDBKeyStore": "./src/crypto/IndexedDBKeyStore.ts",
+    "./crypto/WebCryptoService": "./src/crypto/WebCryptoService.ts",
+    "./livestore/adapters/LiveStoreToDomainAdapter": "./src/livestore/adapters/LiveStoreToDomainAdapter.ts",
+    "./goals/wiring": "./src/goals/wiring.ts",
+    "./projects/wiring": "./src/projects/wiring.ts",
     "./browser/schema": "./src/goals/schema.ts",
     "./goals/schema": "./src/goals/schema.ts",
     "./browser/worker": "./src/browser/worker.ts",
