--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ PORT=4000
 DATABASE_URL=postgres://postgres:devpassword@localhost:5434/mo_local
 KRATOS_PUBLIC_URL=http://localhost:4455
 KRATOS_ADMIN_URL=http://localhost:4434
+VITE_AUTH_URL=http://localhost:4455
+VITE_API_URL=http://localhost:4000
