--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -34,6 +34,8 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/react": "^16.3.0",
     "@livestore/devtools-vite": "0.4.0-dev.19",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
