--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,7 +17,7 @@
     "@livestore/adapter-web": "0.4.0-dev.19",
     "@livestore/livestore": "0.4.0-dev.19",
     "@livestore/react": "0.4.0-dev.19",
-    "@mo/interface": "1.0.0",
+    "@mo/presentation": "1.0.0",
     "@mo/application": "1.0.0",
     "@mo/domain": "1.0.0",
     "@mo/infrastructure": "1.0.0",
