--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,13 +17,15 @@
     "@livestore/adapter-web": "0.4.0-dev.19",
     "@livestore/livestore": "0.4.0-dev.19",
     "@livestore/react": "0.4.0-dev.19",
-    "@mo/presentation": "1.0.0",
     "@mo/application": "1.0.0",
     "@mo/domain": "1.0.0",
     "@mo/infrastructure": "1.0.0",
+    "@mo/presentation": "1.0.0",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@tailwindcss/vite": "^4.1.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -34,9 +36,9 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@livestore/devtools-vite": "0.4.0-dev.19",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/react": "^16.3.0",
-    "@livestore/devtools-vite": "0.4.0-dev.19",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react-swc": "^4.2.2",
