--- a/packages/infrastructure/package.json
+++ b/packages/infrastructure/package.json
@@ -30,7 +30,8 @@
     "@livestore/wa-sqlite": "1.0.5",
     "@mo/application": "1.0.0",
     "@mo/domain": "1.0.0",
-    "minisearch": "^7.2.0"
+    "minisearch": "^7.2.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
