--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "@mo/application": "1.0.0",
-    "@mo/domain": "1.0.0"
+    "@mo/domain": "1.0.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
