--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   postgres:
     image: postgres:16-alpine
@@ -14,6 +12,28 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
       - ./infra/postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
+    healthcheck:
+      test: ['CMD-SHELL', 'pg_isready -U postgres -d postgres']
+      interval: 2s
+      timeout: 5s
+      retries: 30
+
+  postgres-init:
+    image: postgres:16-alpine
+    container_name: mo-local-postgres-init
+    depends_on:
+      postgres:
+        condition: service_healthy
+    environment:
+      POSTGRES_HOST: postgres
+      POSTGRES_PORT: 5432
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: devpassword
+      POSTGRES_DBS: mo_local kratos
+    command: ['/bin/sh', '/scripts/ensure-dbs.sh']
+    volumes:
+      - ./infra/postgres/ensure-dbs.sh:/scripts/ensure-dbs.sh:ro
+    restart: 'no'
 
   kratos-migrate:
     image: oryd/kratos:v1.3.0
@@ -28,7 +48,8 @@ services:
     environment:
       DSN: postgres://postgres:devpassword@postgres:5432/kratos?sslmode=disable&max_conns=20&max_idle_conns=4
     depends_on:
-      - postgres
+      postgres-init:
+        condition: service_completed_successfully
     volumes:
       - ./infra/kratos:/etc/config/kratos
 
@@ -67,8 +88,8 @@ services:
       - '4455:4455'
       - '4434:4434'
     depends_on:
-      - postgres
-      - kratos-migrate
+      kratos-migrate:
+        condition: service_completed_successfully
     volumes:
       - ./infra/kratos:/etc/config/kratos
 
@@ -79,19 +100,23 @@ services:
     command: >
       sh -c "corepack enable &&
       yarn install &&
-      yarn workspace @mo/api build &&
-      yarn workspace @mo/api start"
+      yarn workspace @mo/api db:migrate &&
+      yarn workspace @mo/api dev"
     environment:
       DATABASE_URL: postgres://postgres:devpassword@postgres:5432/mo_local
       KRATOS_PUBLIC_URL: http://kratos:4455
       PORT: 4000
+      CHOKIDAR_USEPOLLING: 'true'
     ports:
       - '4000:4000'
     volumes:
       - .:/workspace
     depends_on:
-      - postgres
-      - kratos
+      postgres-init:
+        condition: service_completed_successfully
+      kratos:
+        condition: service_started
+    restart: unless-stopped
 
   web:
     image: node:22-alpine
@@ -103,13 +128,14 @@ services:
       yarn workspace @mo/web dev --host 0.0.0.0 --port 5173"
     environment:
       VITE_API_URL: http://localhost:4000
-      VITE_AUTH_URL: http://localhost:4455
+      CHOKIDAR_USEPOLLING: 'true'
     ports:
       - '5173:5173'
     volumes:
       - .:/workspace
     depends_on:
       - api
+    restart: unless-stopped
 
 volumes:
   pgdata:
