--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -32,6 +32,7 @@
     "@types/pg": "^8.16.0",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.21.0",
+    "undici-types": "^7.16.0",
     "vitest": "^4.0.15"
   }
 }
