--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "type": "commonjs",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/main.ts",
-    "start": "node dist/main.js",
+    "dev": "ts-node-dev --respawn --transpile-only --require tsconfig-paths/register src/main.ts",
+    "start": "node -r tsconfig-paths/register dist/main.js",
     "build": "tsc -p tsconfig.json",
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
     "typecheck": "tsc --noEmit",
@@ -32,6 +32,7 @@
     "@types/pg": "^8.16.0",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.21.0",
+    "tsconfig-paths": "^4.2.0",
     "undici-types": "^7.16.0",
     "vitest": "^4.0.15"
   }
