--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -15,7 +15,7 @@
     "sourceMap": true,
     "outDir": "./dist",
     "rootDir": "./src",
-    "types": ["node", "undici-types"],
+    "types": ["node"],
     "baseUrl": "./src",
     "paths": {
       "@platform/*": ["platform/*"],
