--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,8 +10,8 @@
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
     "typecheck": "tsc --noEmit",
     "test": "vitest run --passWithNoTests",
-    "db:migrate": "tsx src/auth/infrastructure/migrations/run.ts",
-    "db:migrate:down": "tsx src/auth/infrastructure/migrations/run.ts down"
+    "db:migrate": "tsx src/access/infrastructure/migrations/run.ts",
+    "db:migrate:down": "tsx src/access/infrastructure/migrations/run.ts down"
   },
   "dependencies": {
     "@nestjs/common": "^11.1.9",
@@ -27,12 +27,16 @@
     "rxjs": "^7.8.2"
   },
   "devDependencies": {
+    "@nestjs/testing": "^11.1.9",
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.0",
     "@types/pg": "^8.16.0",
+    "@types/supertest": "^6.0.3",
+    "supertest": "^7.1.4",
     "ts-node-dev": "^2.0.0",
-    "tsx": "^4.21.0",
     "tsconfig-paths": "^4.2.0",
+    "tsx": "^4.21.0",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^4.0.15"
   }
 }
