--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,7 +9,8 @@
     "build": "tsc -p tsconfig.json",
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
     "typecheck": "tsc --noEmit",
-    "test": "vitest run --passWithNoTests",
+    "test": "vitest run --passWithNoTests --exclude \"**/*.e2e.test.ts\"",
+    "test:integration": "vitest run src/__tests__/**/*.e2e.test.ts --passWithNoTests",
     "db:migrate": "tsx src/access/infrastructure/migrations/run.ts",
     "db:migrate:down": "tsx src/access/infrastructure/migrations/run.ts down"
   },
