--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "dev:stack:status": "./scripts/dev-stack.sh status",
     "db:migrate": "yarn workspace @mo/api db:migrate",
     "db:migrate:down": "yarn workspace @mo/api db:migrate:down",
+    "test": "yarn test:unit",
+    "test:unit": "yarn workspace @mo/domain test && yarn workspace @mo/application test && yarn workspace @mo/infrastructure test && yarn workspace @mo/presentation test && yarn workspace @mo/web test && yarn workspace @mo/api test",
+    "test:integration": "yarn workspace @mo/api test:integration",
+    "test:all": "yarn test:unit && yarn test:integration && yarn e2e",
     "e2e": "yarn workspace @mo/e2e test",
     "build": "yarn workspaces run build",
-    "test": "yarn workspaces run test",
     "typecheck": "yarn workspaces run typecheck",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
