test: fix app test fixtures

--- a/packages/application/package.json
+++ b/packages/application/package.json
@@ -12,7 +12,8 @@
   },
   "scripts": {
     "test": "vitest --no-watch",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "typecheck:test": "tsc --noEmit -p tsconfig.test.json"
   },
   "dependencies": {
     "@mo/domain": "1.0.0"
