--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "test:unit": "yarn workspace @mo/domain test && yarn workspace @mo/application test && yarn workspace @mo/infrastructure test && yarn workspace @mo/presentation test && yarn workspace @mo/web test && yarn workspace @mo/api test",
     "test:integration": "yarn workspace @mo/api test:integration",
     "test:all": "yarn test:unit && yarn test:integration && yarn e2e",
+    "test:coverage": "yarn workspace @mo/domain test --coverage && yarn workspace @mo/application test --coverage && yarn workspace @mo/infrastructure test --coverage && yarn workspace @mo/presentation test --coverage && yarn workspace @mo/web test --coverage && yarn workspace @mo/api test --coverage",
     "e2e": "yarn workspace @mo/e2e test",
     "build": "yarn workspaces run build",
     "typecheck": "yarn workspaces run typecheck",
+    "typecheck:tests": "yarn workspaces run typecheck:test",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "format": "prettier --write \"**/*.{ts,tsx,json,md}\"",
@@ -32,6 +34,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.48.0",
     "@typescript-eslint/parser": "^8.48.0",
+    "@vitest/coverage-v8": "^4.0.16",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
