--- a/packages/infrastructure/package.json
+++ b/packages/infrastructure/package.json
@@ -6,23 +6,20 @@
   "types": "./src/index.ts",
   "exports": {
     ".": "./src/index.ts",
-    "./goals": "./src/goals/index.ts",
-    "./projects": "./src/projects/index.ts",
-    "./cloud": "./src/cloud/index.ts",
     "./browser": "./src/browser.ts",
+    "./browser/schema": "./src/livestore/schema.ts",
     "./browser/wiring/store": "./src/browser/wiring/store.ts",
-    "./events/InMemoryEventBus": "./src/events/InMemoryEventBus.ts",
+    "./browser/worker": "./src/browser/worker.ts",
+    "./cloud": "./src/cloud/index.ts",
+    "./crypto/deriveSalt": "./src/crypto/deriveSalt.ts",
     "./crypto/IndexedDBKeyStore": "./src/crypto/IndexedDBKeyStore.ts",
     "./crypto/WebCryptoService": "./src/crypto/WebCryptoService.ts",
+    "./events/InMemoryEventBus": "./src/events/InMemoryEventBus.ts",
+    "./goals": "./src/goals/index.ts",
     "./livestore/adapters/LiveStoreToDomainAdapter": "./src/livestore/adapters/LiveStoreToDomainAdapter.ts",
-    "./goals/wiring": "./src/goals/wiring.ts",
-    "./projects/wiring": "./src/projects/wiring.ts",
-    "./browser/schema": "./src/goals/schema.ts",
-    "./goals/schema": "./src/goals/schema.ts",
-    "./sagas/GoalAchievementSagaStore": "./src/sagas/GoalAchievementSagaStore.ts",
-    "./browser/worker": "./src/browser/worker.ts",
-    "./crypto/deriveSalt": "./src/crypto/deriveSalt.ts",
-    "./livestore/sync/syncGate": "./src/livestore/sync/syncGate.ts"
+    "./livestore/sync/syncGate": "./src/livestore/sync/syncGate.ts",
+    "./projects": "./src/projects/index.ts",
+    "./sagas/GoalAchievementSagaStore": "./src/sagas/GoalAchievementSagaStore.ts"
   },
   "scripts": {
     "test": "vitest --no-watch",
