feat(eventstore-web): add wa-sqlite adapter

--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "db:migrate": "yarn workspace @mo/api db:migrate",
     "db:migrate:down": "yarn workspace @mo/api db:migrate:down",
     "test": "yarn test:unit",
-    "test:unit": "yarn workspace @mo/domain test && yarn workspace @mo/eventstore-core test && yarn workspace @mo/application test && yarn workspace @mo/infrastructure test && yarn workspace @mo/presentation test && yarn workspace @mo/web test && yarn workspace @mo/api test",
+    "test:unit": "yarn workspace @mo/domain test && yarn workspace @mo/eventstore-core test && yarn workspace @mo/eventstore-web test && yarn workspace @mo/application test && yarn workspace @mo/infrastructure test && yarn workspace @mo/presentation test && yarn workspace @mo/web test && yarn workspace @mo/api test",
     "test:integration": "yarn workspace @mo/api test:integration",
     "test:all": "yarn test:unit && yarn test:integration && yarn e2e",
-    "test:coverage": "yarn workspace @mo/domain test --coverage && yarn workspace @mo/eventstore-core test --coverage && yarn workspace @mo/application test --coverage && yarn workspace @mo/infrastructure test --coverage && yarn workspace @mo/presentation test --coverage && yarn workspace @mo/web test --coverage && yarn workspace @mo/api test --coverage",
+    "test:coverage": "yarn workspace @mo/domain test --coverage && yarn workspace @mo/eventstore-core test --coverage && yarn workspace @mo/eventstore-web test --coverage && yarn workspace @mo/application test --coverage && yarn workspace @mo/infrastructure test --coverage && yarn workspace @mo/presentation test --coverage && yarn workspace @mo/web test --coverage && yarn workspace @mo/api test --coverage",
     "e2e": "yarn workspace @mo/e2e test",
     "build": "yarn workspaces run build",
     "typecheck": "yarn workspaces run typecheck",
