--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "test": "vitest --no-watch",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "typecheck:test": "tsc --noEmit -p tsconfig.test.json"
   },
   "dependencies": {},
   "devDependencies": {
