--- a/packages/infrastructure/package.json
+++ b/packages/infrastructure/package.json
@@ -6,20 +6,13 @@
   "types": "./src/index.ts",
   "exports": {
     ".": "./src/index.ts",
-    "./browser": "./src/browser.ts",
-    "./browser/schema": "./src/livestore/schema.ts",
-    "./browser/wiring/store": "./src/browser/wiring/store.ts",
-    "./browser/worker": "./src/browser/worker.ts",
     "./cloud": "./src/cloud/index.ts",
     "./crypto/deriveSalt": "./src/crypto/deriveSalt.ts",
     "./crypto/IndexedDBKeyStore": "./src/crypto/IndexedDBKeyStore.ts",
     "./crypto/WebCryptoService": "./src/crypto/WebCryptoService.ts",
     "./events/InMemoryEventBus": "./src/events/InMemoryEventBus.ts",
     "./goals": "./src/goals/index.ts",
-    "./livestore/adapters/LiveStoreToDomainAdapter": "./src/livestore/adapters/LiveStoreToDomainAdapter.ts",
-    "./livestore/sync/syncGate": "./src/livestore/sync/syncGate.ts",
-    "./projects": "./src/projects/index.ts",
-    "./sagas/GoalAchievementSagaStore": "./src/sagas/GoalAchievementSagaStore.ts"
+    "./projects": "./src/projects/index.ts"
   },
   "scripts": {
     "test": "vitest --no-watch",
