--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,13 +14,12 @@
   "dependencies": {
     "@fontsource-variable/mulish": "^5.2.8",
     "@fontsource/noto-sans": "^5.2.10",
-    "@livestore/adapter-web": "0.4.0-dev.21",
-    "@livestore/livestore": "0.4.0-dev.21",
-    "@livestore/react": "0.4.0-dev.21",
     "@mo/application": "1.0.0",
     "@mo/domain": "1.0.0",
+    "@mo/eventstore-web": "1.0.0",
     "@mo/infrastructure": "1.0.0",
     "@mo/presentation": "1.0.0",
+    "@mo/sync-engine": "1.0.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-select": "^2.2.6",
@@ -37,7 +36,6 @@
     "zod": "^4.1.13"
   },
   "devDependencies": {
-    "@livestore/devtools-vite": "0.4.0-dev.21",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/react": "^16.3.0",
     "@types/react": "^19.2.7",
