--- a/packages/infrastructure/package.json
+++ b/packages/infrastructure/package.json
@@ -24,6 +24,7 @@
     "@mo/domain": "1.0.0",
     "@mo/eventstore-core": "1.0.0",
     "@mo/eventstore-web": "1.0.0",
+    "@mo/sync-engine": "1.0.0",
     "minisearch": "^7.2.0",
     "zod": "^4.1.13"
   },
