--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   },
   "lint-staged": {
     "**/*.{ts,tsx}": [
-      "eslint --max-warnings=0",
+      "eslint --max-warnings=0 --no-warn-ignored",
       "prettier --write"
     ],
     "**/*.{json,md}": [
