feat(key-service-idl): add shared idl package

--- a/packages/key-service-web/package.json
+++ b/packages/key-service-web/package.json
@@ -13,6 +13,7 @@
     "typecheck:test": "tsc --noEmit -p tsconfig.test.json"
   },
   "dependencies": {
+    "@mo/key-service-idl": "1.0.0",
     "@mo/key-service-wasm": "1.0.0"
   },
   "devDependencies": {
