--- a/packages/key-service-wasm/package.json
+++ b/packages/key-service-wasm/package.json
@@ -5,6 +5,7 @@
   "main": "./pkg/mo_key_service_wasm.js",
   "types": "./pkg/mo_key_service_wasm.d.ts",
   "scripts": {
+    "build": "wasm-pack build --target web --out-dir pkg",
     "typecheck": "echo \"skip (wasm)\""
   },
   "exports": {
