--- a/packages/eventstore-web/package.json
+++ b/packages/eventstore-web/package.json
@@ -2,6 +2,7 @@
   "name": "@mo/eventstore-web",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "main": "./src/index.ts",
   "types": "./src/index.ts",
   "exports": {
