feat(infrastructure): add CBOR manifest codec for signature verification

--- a/packages/infrastructure/package.json
+++ b/packages/infrastructure/package.json
@@ -26,6 +26,7 @@
     "@mo/eventstore-core": "1.0.0",
     "@mo/eventstore-web": "1.0.0",
     "@mo/sync-engine": "1.0.0",
+    "cbor-x": "^1.6.0",
     "minisearch": "^7.2.0",
     "zod": "^4.1.13"
   },
